--- a/Index.html
+++ b/Index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>StyleHub | Quality Products, Modern Design</title>
+    <link rel="stylesheet" href="Style.css">
+    <link rel="stylesheet" href="Script.js">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
         /* CSS Variables for Colors */
